# VoiceBiometricsPipeline

./: .gitignore  CMakeLists.txt  README.md  VoiceBiometricsPipeline.cpp  VoiceBiometricsPipeline.h  analyze_speechbrain_fbank.py  audio_feature_extractor.cc  audio_feature_extractor.h  audio_feature_extractor_v2.cc  audio_feature_extractor_v2.h  audio_features.cpp  audio_features.h  compare_wav_bins.py  compile_commands.json  ecapa_engine.cc  ecapa_engine.h  fbank.cpp  fbank.h  main.cc  main.cpp  main_2.cc  mel_extractor.cc  mel_extractor.h  test.cc  test_audio_feature_extractor.cc  test_audio_feature_v2.cc  test_compare_features.py  test_fbank.cc  test_mel_compare  test_mel_compare.cpp  time_utils.h  vad_engine.cc  vad_engine.cpp  vad_engine.h  vad_engine_2.cpp  voice_bio_pipeline.cc  voice_bio_pipeline.cpp  voice_bio_pipeline.h  wav.cpp  wav.h
cc_audio_processing/: CMakeLists.txt  README.md  compare_cpp_sb_feats.py
cc_audio_processing/include/: audio_feature_processor.h
cc_audio_processing/src/: audio_feature_processor.cc  dump_fbank_cmvn.cc  dump_fbank_cmvn_from_raw.cc  main_example.cc
python/: ecapa_tdnn_onnx.py  pyproject.toml  test.py
python/pipeline/: demo_compute_features.py  main.py  voice_bio_pipeline.py
scripts/: setup_kaldi_fbank.sh  setup_onnxruntime.sh
test/: test_fbank.cc  test_fbank.cpp  test_fbank.py
